hard-gists/7551089/run.log
=== Docker Run Log for 7551089 ===
Started at: Mi 29. Okt 17:12:48 CET 2025

[2025-10-29 17:12:49] START: Running container for 7551089
[2025-10-29 17:12:49] SUCCESS: Container 2a0e135d5dbcd302d04792b7e7b6a266339ff1bb8153dbda3e67936adb583ed2 started for 7551089
=== Container logs for 7551089 ===
  File "/snippet.py", line 11
    print '[*] print_links()' 
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7551089 ===
[2025-10-29 17:12:51] INFO: Container 2a0e135d5dbcd302d04792b7e7b6a266339ff1bb8153dbda3e67936adb583ed2 has stopped
